Added support for touch events

--- a/app/src/index.html
+++ b/app/src/index.html
@@ -1,15 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0,target-densitydpi=device-dpi, user-scalable=no">
     <link rel="icon" href="data:;base64,iVBORw0KGgo=">
   </head>
   <body>
-    <div class="container">
-      <canvas id="canvas"></canvas>
-      <div class="scoreboard">
-        Score: <span id="score-indicator">0</span>
-      </div>
-    </div>
+    <canvas id="canvas"></canvas>
   </body>
 </html>
